--- a/theCapitol.Web/Views/Shared/_Layout.cshtml
+++ b/theCapitol.Web/Views/Shared/_Layout.cshtml
@@ -1,44 +1,96 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    @* The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags *@
+    <title>@ViewBag.Title | the Capitol</title>
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
+    @* render css & JavaScript (bundled in BundleConfig) *@
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-
+    @Scripts.Render("~/Scripts/js")
+    <!-- custom style (override template) -->
+    <link href="~/Content/css/custom.css" rel="stylesheet" />
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+    <header id="home">
+        <!-- nav -->
+        <nav id="nav" class="navbar nav-transparent">
+            <div class="container">
+                <div class="navbar-header">
+                    <!-- collapsed nav menu -->
+                    <div class="nav-collapse">
+                        <span></span>
+                    </div>
+                </div>
+                <!--  nav links  -->
+                <ul class="main-nav nav navbar-nav navbar-right">
+                    <li><a href="@Url.Action("Index", "Home")">the<span>Capitol</span></a></li>
+                    <li><a href="@Url.Action("Services", "Home")">services</a></li>
+                    <li><a href="@Url.Action("Team", "Home")">our team</a></li>
+                    <li><a href="@Url.Action("Media", "Home")">media</a></li>
+                    <li><a href="@Url.Action("Contact", "Home")">contact</a></li>
+                    @Html.Partial("_LoginPartial")
                 </ul>
-                @Html.Partial("_LoginPartial")
+            </div>
+        </nav>
+    </header>
+
+    <div>
+        <!-- background image -->
+        <div class="bg-img" style="background-image: url('/Content/img/template/background1.jpg');">
+            <div class="overlay"></div>
+        </div>
+        @RenderBody()
+    </div>
+    <footer id="footer" class="sm-padding bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- footer logo -->
+                    <div class="footer-logo">
+                        <a href="@Url.Action("Index", "Home")"><img src="~/Content/img/template/logo-alt.png" alt="logo"></a>
+                    </div>
+                    <!-- footer follow -->
+                    <ul class="footer-follow">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                    <!-- copyright -->
+                    <div class="footer-copyright">
+                        <p>
+                            Copyright &copy; @DateTime.Now.Year All Rights Reserved. <br />
+                            Original Template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    </footer>
+
+    <!-- back to top -->
+    <div id="back-to-top"></div>
+
+    <!-- preloader -->
+    <div id="preloader">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
