--- a/theCapitol.Web/Views/Home/Media.cshtml
+++ b/theCapitol.Web/Views/Home/Media.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "media";
 }
-@*<div id="portfolio" class="section md-padding bg-grey">
-    <div class="home-wrapper">*@
+<div id="portfolio" class="section md-padding bg-grey">
+    <div class="home-wrapper">
         <div class="container">
             <div class="row">
                 <!-- section header -->
@@ -90,5 +90,5 @@
                 </div>
             </div>
         </div>
-    @*</div>
-</div>*@
+    </div>
+</div>
