--- a/theCapitol.Web/Views/Home/Index.cshtml
+++ b/theCapitol.Web/Views/Home/Index.cshtml
@@ -2,29 +2,12 @@
     ViewBag.Title = "welcome to";
 }
 
-<!-- home wrapper -->
-<div class="home-wrapper">
-    <div class="container">
-        <div class="row">
-            <!-- home content -->
-            <div class="col-md-10 col-md-offset-1">
-                <div class="home-content">
-                    <h1 class="white-text">we are the<span>Capitol</span></h1>
-                    <p class="white-text sub-text">
-                        are <span>you</span> ready?
-                    </p>
-                    <button class="white-btn">Get Started!</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- about -->
 <div id="about" class="section md-padding">
     <div class="container">
         <div class="row">
             <div class="section-header text-center">
-                <h2 class="title">welcome to the<span>Capitol</span></h2>
+                <h2 class="title">welcome to the <span>Capitol</span></h2>
             </div>
             <div class="col-md-4">
                 <div class="about">
@@ -59,9 +42,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="section-header">
-                    <h2 class="title">why choose us</h2>
+                    <h2 class="title">why we exist</h2>
                 </div>
-                <p>Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris. Ultrices sagittis orci a scelerisque purus.</p>
+                <p>
+                    The <span>Capitol</span> exists to provide a safe place for <span>students</span> 6th - 12th grade to connect
+                    with God, each other, and leaders who desire to see them grow closter to Chris. <br />
+                    We meet <span>Sundays at 6pm</span> in the Main Auditorium of the RC Liberty campus.
+                </p>
                 <div class="feature">
                     <i class="fa fa-check"></i>
                     <p>Quis varius quam quisque id diam vel quam elementum.</p>
@@ -91,17 +78,21 @@
         </div>
     </div>
 </div>
-<!-- testimonial -->
+<!-- Testimonial -->
 <div id="testimonial" class="section md-padding">
-    <!-- background image -->
+    <!-- Background Image -->
     <div class="bg-img" style="background-image: url('/Content/img/template/background3.jpg');">
         <div class="overlay"></div>
     </div>
+    <!-- /Background Image -->
+    <!-- Container -->
     <div class="container">
+        <!-- Row -->
         <div class="row">
-            <!-- slider -->
+            <!-- Testimonial slider -->
             <div class="col-md-10 col-md-offset-1">
                 <div id="testimonial-slider" class="owl-carousel owl-theme">
+                    <!-- testimonial -->
                     <div class="testimonial">
                         <div class="testimonial-meta">
                             <img src="~/Content/img/template/perso1.jpg" alt="">
@@ -110,6 +101,8 @@
                         </div>
                         <p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
                     </div>
+                    <!-- /testimonial -->
+                    <!-- testimonial -->
                     <div class="testimonial">
                         <div class="testimonial-meta">
                             <img src="~/Content/img/template/perso2.jpg" alt="">
@@ -118,8 +111,13 @@
                         </div>
                         <p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
                     </div>
+                    <!-- /testimonial -->
                 </div>
             </div>
+            <!-- /Testimonial slider -->
         </div>
+        <!-- /Row -->
     </div>
+    <!-- /Container -->
 </div>
+<!-- /Testimonial -->
