--- a/theCapitol.Web/Views/Home/Index.cshtml
+++ b/theCapitol.Web/Views/Home/Index.cshtml
@@ -36,6 +36,42 @@
         </div>
     </div>
 </div>
+
+<!-- testimonial -->
+<div id="testimonial" class="section md-padding">
+    <!-- background -->
+    <div class="bg-img" style="background-image: url('/Content/img/template/background3.jpg');">
+        <div class="overlay"></div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <!-- slider -->
+            <div class="col-md-10 col-md-offset-1">
+                <div id="testimonial-slider" class="owl-carousel owl-theme">
+                    <!-- testimonial content -->
+                    <div class="testimonial">
+                        <div class="testimonial-meta">
+                            <img src="~/Content/img/template/perso1.jpg" alt="">
+                            <h3 class="white-text">John Doe</h3>
+                            <span>Web Designer</span>
+                        </div>
+                        <p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
+                    </div>
+                    <!-- testimonial content -->
+                    <div class="testimonial">
+                        <div class="testimonial-meta">
+                            <img src="~/Content/img/template/perso2.jpg" alt="">
+                            <h3 class="white-text">John Doe</h3>
+                            <span>Web Designer</span>
+                        </div>
+                        <p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- why choose us -->
 <div id="features" class="section md-padding bg-grey">
     <div class="container">
@@ -46,7 +82,7 @@
                 </div>
                 <p>
                     The <span>Capitol</span> exists to provide a safe place for <span>students</span> 6th - 12th grade to connect
-                    with God, each other, and leaders who desire to see them grow closter to Chris. <br />
+                    with God, each other, and leaders who desire to see them grow closer to Christ. <br />
                     We meet <span>Sundays at 6pm</span> in the Main Auditorium of the RC Liberty campus.
                 </p>
                 <div class="feature">
@@ -78,46 +114,3 @@
         </div>
     </div>
 </div>
-<!-- Testimonial -->
-<div id="testimonial" class="section md-padding">
-    <!-- Background Image -->
-    <div class="bg-img" style="background-image: url('/Content/img/template/background3.jpg');">
-        <div class="overlay"></div>
-    </div>
-    <!-- /Background Image -->
-    <!-- Container -->
-    <div class="container">
-        <!-- Row -->
-        <div class="row">
-            <!-- Testimonial slider -->
-            <div class="col-md-10 col-md-offset-1">
-                <div id="testimonial-slider" class="owl-carousel owl-theme">
-                    <!-- testimonial -->
-                    <div class="testimonial">
-                        <div class="testimonial-meta">
-                            <img src="~/Content/img/template/perso1.jpg" alt="">
-                            <h3 class="white-text">John Doe</h3>
-                            <span>Web Designer</span>
-                        </div>
-                        <p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
-                    </div>
-                    <!-- /testimonial -->
-                    <!-- testimonial -->
-                    <div class="testimonial">
-                        <div class="testimonial-meta">
-                            <img src="~/Content/img/template/perso2.jpg" alt="">
-                            <h3 class="white-text">John Doe</h3>
-                            <span>Web Designer</span>
-                        </div>
-                        <p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
-                    </div>
-                    <!-- /testimonial -->
-                </div>
-            </div>
-            <!-- /Testimonial slider -->
-        </div>
-        <!-- /Row -->
-    </div>
-    <!-- /Container -->
-</div>
-<!-- /Testimonial -->
