--- a/theCapitol.Web/Views/RolesAdmin/Delete.cshtml
+++ b/theCapitol.Web/Views/RolesAdmin/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model theCapitol.Web.Models.ApplicationUser
+﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 @{
     ViewBag.Title = "Delete";
@@ -6,21 +6,22 @@
 
 <h2>Delete.</h2>
 
-<h3>Are you sure you want to delete this User?</h3>
+<h3>Are you sure you want to delete this Role? </h3>
+<p>Deleting this Role will remove all users from this role. It will not delete the users.</p>
 <div>
-    <h4>User.</h4>
+    <h4>Role.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
