--- a/theCapitol.Web/Views/RolesAdmin/Details.cshtml
+++ b/theCapitol.Web/Views/RolesAdmin/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model theCapitol.Web.Models.ApplicationUser
+﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 @{
     ViewBag.Title = "Details";
@@ -7,31 +7,31 @@
 <h2>Details.</h2>
 
 <div>
-    <h4>User</h4>
+    <h4>Roles.</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
 </div>
-<h4>List of roles for this user</h4>
-@if (ViewBag.RoleNames.Count == 0)
+<h4>List of users in this role</h4>
+@if (ViewBag.UserCount == 0)
 {
     <hr />
-    <p>No roles found for this user.</p>
+    <p>No users found in this role.</p>
 }
 
 <table class="table">
 
-    @foreach (var item in ViewBag.RoleNames)
+    @foreach (var item in ViewBag.Users)
     {
         <tr>
             <td>
-                @item
+                @item.UserName
             </td>
         </tr>
     }
