--- a/theCapitol.Web/Views/RolesAdmin/Index.cshtml
+++ b/theCapitol.Web/Views/RolesAdmin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<theCapitol.Web.Models.ApplicationUser>
+﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 
 @{
     ViewBag.Title = "Index";
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
 
@@ -23,12 +23,11 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.UserName)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                <a href="@Url.Action("Delete", "RolesAdmin", new { @id=item.Id })" onclick="return confirm('Are you sure you want to delete the role @item.Name');">Delete</a>
             </td>
         </tr>
     }
