--- a/theCapitol.Web/Views/Shared/_LoginPartial.cshtml
+++ b/theCapitol.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,40 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    //using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
         @Html.AntiForgeryToken()
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+        <li class="white-text">
+            @{
+                string greeting = "";
+                if (DateTime.Now.Hour > 4 && DateTime.Now.Hour < 12)
+                {
+                    greeting = $"Good Morning, {User.Identity.GetUserName()}!";
+                }
+                else if (DateTime.Now.Hour > 12 && DateTime.Now.Hour < 17)
+                {
+                    greeting = $"Good Afternoon, {User.Identity.GetUserName()}!";
+                }
+                else if (DateTime.Now.Hour >= 17 && DateTime.Now.Hour <= 21)
+                {
+                    greeting = $"Good Evening, {User.Identity.GetUserName()}!";
+                }
+                else
+                {
+                    greeting = $"Goodnight, {User.Identity.GetUserName()}!";
+                }
+
+            }
+
+            <a href="@Url.Action("Index", "Manage")">@greeting</a>
+            @*@Html.ActionLink($"Good {greeting}, {User.Identity.GetUserName()}!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    }
-}
-else
-{
-    <li>@Html.ActionLink("register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("login", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-}
+        <li class="white-text"><a href="javascript:document.getElementById('logoutForm').submit()">log off</a></li>
+                    }
+                }
+                else
+                {
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Register" ? "active" : "")">@Html.ActionLink("register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+                    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Login" ? "active" : "")">@Html.ActionLink("login", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+                }
