--- a/theCapitol.Web/Views/Home/Team.cshtml
+++ b/theCapitol.Web/Views/Home/Team.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <!-- section header -->
             <div class="section-header text-center">
-                <h2 class="title">@ViewBag.Title</h2>
+                <h2 class="page-title">@ViewBag.Title</h2>
             </div>
             <!-- team -->
             <div class="col-sm-4">
