--- a/theCapitol.Web/Content/css/custom.css
+++ b/theCapitol.Web/Content/css/custom.css
@@ -2,6 +2,15 @@
     site wide 
 *****************/
 
+.field-validation-error,
+.text-danger /* error messages (validation) */
+{
+    color: #e00006;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 16px;
+}
+
 span /* keywords/highlights */
 {
     color: #b7a602;
@@ -34,6 +43,36 @@ span /* keywords/highlights */
         text-shadow: 5px 5px 5px #000;
     }
 
+.content-wrapper /* wrap RenderBody() content */
+{
+    margin: 1.5em 1.5em 1.5em 1.5em;
+}
+
+.btn-default
+{
+    font-weight: bold;
+    border: 1px solid #000;
+}
+
+    .btn-default:hover
+    {
+        background-color: #b7a602;
+        color: #000;
+        font-weight: bold;
+        font-size: 14px;
+        border: 1px solid #000;
+    }
+
+.page-title /* page "title" text */
+{
+    font-size: 5em;
+    text-shadow: 3px 3px 3px #b7a602;
+}
+
+.section-header /* override .section-header in style.css */
+{
+    margin: 0;
+}
 /*****************
     navigation 
 *****************/
@@ -63,3 +102,80 @@ span /* keywords/highlights */
         background-color: #b7a602;
     }
 }
+
+/*****************
+     register 
+*****************/
+/*#register
+{
+    padding: 2em;
+}*/
+
+#register > form > h4
+{
+    font-size: 1.2em;
+}
+
+#register > h2,
+#register > form > h4
+{
+    text-align: center;
+}
+
+.register-label
+{
+    color: #000;
+    font-size: 20px;
+}
+
+#register > form > div.form-group > div > input[type=text],
+#register > form > div.form-group > div > input[type=password]
+{
+    border: 2px solid #000;
+}
+
+/*****************
+       login 
+*****************/
+#login
+{
+    padding: 2em;
+}
+
+    #login > div.row > div.col-md-12 > section#loginForm > form > h4
+    {
+        font-size: 1.2em;
+    }
+
+.login-label
+{
+    font-size: 20px;
+    color: #000;
+    text-align: right;
+}
+
+#login > div.row > section#loginForm > form > div.form-group > div > input[type=text],
+#login > div.row > section#loginForm > form > div.form-group > div > input[type=password]
+{
+    border: 2px solid #000;
+}
+
+.remember-me > label
+{
+    font-weight: bold;
+    color: #000;
+}
+
+#register-link
+{
+    text-align: center;
+    color: #000;
+    font-weight: bold;
+}
+
+    #register-link > a
+    {
+        color: #000;
+        font-weight: bold;
+        font-style: italic;
+    }
