--- a/theCapitol.Web/Content/css/custom.css
+++ b/theCapitol.Web/Content/css/custom.css
@@ -104,6 +104,60 @@ span /* keywords/highlights */
 }
 
 /*****************
+  admin side nav 
+*****************/
+.sideNav
+{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+}
+
+    .sideNav > a
+    {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #b7a602;
+        display: block;
+        transition: 0.3s;
+    }
+
+        .sideNav > a:hover
+        {
+            color: #f1f1f1;
+        }
+
+    .sideNav > .closeBtn
+    {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+    }
+
+@media screen and (max-height: 450px)
+{
+    .sideNav
+    {
+        padding-top: 15px;
+    }
+
+        .sideNav > a
+        {
+            font-size: 18px;
+        }
+}
+
+/*****************
      register 
 *****************/
 /*#register
