--- a/theCapitol.Web/Views/Shared/_Layout.cshtml
+++ b/theCapitol.Web/Views/Shared/_Layout.cshtml
@@ -55,6 +55,16 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- admin side nav -->
+        <div id="adminSideNav" class="sideNav">
+            <a href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</a>
+            <a href="@Url.Action("Index", "Contacts")">Contacts</a>
+        </div>
+
+        <!-- use any element to open the sideNav -->
+        <span onclick="openNav()">ADMIN</span>
+
         <!-- home wrapper -->
         <div class="home-wrapper">
             <div class="container">
@@ -119,3 +129,13 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+    <script>
+        function openNav() {
+            document.getElementById('adminSideNav').style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById('adminSideNav').style.width = "0";
+        }
+    </script>
