remove data/update CSS
- remove Contacts Controller & associated Views; updated data .csproj to reflect no data
- more updates to styling/css

--- a/theCapitol.Web/Views/Home/Index.cshtml
+++ b/theCapitol.Web/Views/Home/Index.cshtml
@@ -2,6 +2,29 @@
     ViewBag.Title = "welcome to";
 }
 
+@section backgroundImage {
+    <!-- background image -->
+    <div class="bg-img" style="background-image: url('/Content/img/template/background1.jpg');">
+        <div class="overlay"></div>
+    </div>
+}
+
+@section homeWrapper {
+    <!-- home wrapper -->
+    <div class="home-wrapper">
+        <div class="container">
+            <div class="row">
+                <!-- home content -->
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="home-content">
+                        <h1 class="white-text theCapitol-main">we are the <span>Capitol</span></h1>
+                        <button class="white-btn">Get Started!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 <!-- about -->
 <div id="about" class="section md-padding">
     <div class="container">
