--- a/theCapitol.Web/Views/Home/Index.cshtml
+++ b/theCapitol.Web/Views/Home/Index.cshtml
@@ -17,8 +17,7 @@
                 <!-- home content -->
                 <div class="col-md-10 col-md-offset-1">
                     <div class="home-content">
-                        <h1 class="white-text theCapitol-main">we are the <span>Capitol</span></h1>
-                        <button class="white-btn">Get Started!</button>
+                        <h1 class="white-text theCapitol-main">welcome to the <span>Capitol</span></h1>
                     </div>
                 </div>
             </div>
@@ -30,30 +29,27 @@
     <div class="container">
         <div class="row">
             <div class="section-header text-center">
-                <h2 class="title">welcome to the <span>Capitol</span></h2>
+                <h2 class="title">we are the <span>Capitol</span></h2>
             </div>
             <div class="col-md-4">
                 <div class="about">
-                    <i class="fa fa-cogs"></i>
-                    <h3>Love God</h3>
+                    <i class="fa fa-user"></i>
+                    <h3>every person has a <span>name</span></h3>
                     <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                    <a href="#">Read more</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about">
-                    <i class="fa fa-magic"></i>
-                    <h3>Love People</h3>
+                    <i class="fa fa-book"></i>
+                    <h3>every name has a <span>story</span></h3>
                     <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                    <a href="#">Read more</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="about">
-                    <i class="fa fa-mobile"></i>
-                    <h3>Be Different</h3>
+                    <i class="fa fa-heart"></i>
+                    <h3>every story <span>matters</span> to God</h3>
                     <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-                    <a href="#">Read more</a>
                 </div>
             </div>
         </div>
@@ -63,7 +59,7 @@
 <!-- testimonial -->
 <div id="testimonial" class="section md-padding">
     <!-- background -->
-    <div class="bg-img" style="background-image: url('/Content/img/template/background3.jpg');">
+    <div class="bg-img" style="background-image: url('/Content/img/union-station.jpg');">
         <div class="overlay"></div>
     </div>
     <div class="container">
@@ -101,7 +97,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="section-header">
-                    <h2 class="title">why we exist</h2>
+                    <h2 class="title">why <span>we</span> exist</h2>
                 </div>
                 <p>
                     The <span>Capitol</span> exists to provide a safe place for <span>students</span> 6th - 12th grade to connect
@@ -110,19 +106,19 @@
                 </p>
                 <div class="feature">
                     <i class="fa fa-check"></i>
-                    <p>Quis varius quam quisque id diam vel quam elementum.</p>
+                    <p>engaging storytelling</p>
                 </div>
                 <div class="feature">
                     <i class="fa fa-check"></i>
-                    <p>Mauris augue neque gravida in fermentum.</p>
+                    <p>energetic worship</p>
                 </div>
                 <div class="feature">
                     <i class="fa fa-check"></i>
-                    <p>Orci phasellus egestas tellus rutrum.</p>
+                    <p>illustrated messages</p>
                 </div>
                 <div class="feature">
                     <i class="fa fa-check"></i>
-                    <p>Nec feugiat nisl pretium fusce id velit ut tortor pretium.</p>
+                    <p>a place to be <span>yourself</span></p>
                 </div>
             </div>
             <!-- slider -->
