--- a/theCapitol.Web/Views/Home/Team.cshtml
+++ b/theCapitol.Web/Views/Home/Team.cshtml
@@ -24,8 +24,8 @@
                         </div>
                     </div>
                     <div class="team-content">
-                        <h3>John Doe</h3>
-                        <span>Web Designer</span>
+                        <h3>JP Stafford</h3>
+                        <span>Pastor</span>
                     </div>
                 </div>
             </div>
@@ -43,8 +43,8 @@
                         </div>
                     </div>
                     <div class="team-content">
-                        <h3>John Doe</h3>
-                        <span>Web Designer</span>
+                        <h3>Camryn Clay</h3>
+                        <span>Worship Leader</span>
                     </div>
                 </div>
             </div>
@@ -62,8 +62,8 @@
                         </div>
                     </div>
                     <div class="team-content">
-                        <h3>John Doe</h3>
-                        <span>Web Designer</span>
+                        <h3>Person #3</h3>
+                        <span>[Insert Title Here]</span>
                     </div>
                 </div>
             </div>
