styling: added content/Services.cshtml
- updated Services.html content
- added content/images (custom RC images/branding)

--- a/theCapitol.Web/Views/Home/Index.cshtml
+++ b/theCapitol.Web/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
     </div>
 </div>
 
-<!-- why choose us -->
+<!-- why we exist -->
 <div id="features" class="section md-padding bg-grey">
     <div class="container">
         <div class="row">
@@ -124,10 +124,10 @@
             <!-- slider -->
             <div class="col-md-6">
                 <div id="about-slider" class="owl-carousel owl-theme">
-                    <img class="img-responsive" src="~/Content/img/template/about1.jpg" alt="">
-                    <img class="img-responsive" src="~/Content/img/template/about2.jpg" alt="">
-                    <img class="img-responsive" src="~/Content/img/template/about1.jpg" alt="">
-                    <img class="img-responsive" src="~/Content/img/template/about2.jpg" alt="">
+                    <img class="img-responsive" src="~/Content/img/band-1.jpeg" alt="">
+                    <img class="img-responsive" src="~/Content/img/crowd-4.jpg" alt="">
+                    <img class="img-responsive" src="~/Content/img/band-2.png" alt="">
+                    <img class="img-responsive" src="~/Content/img/union-station-color.jpg" alt="">
                 </div>
             </div>
         </div>
