--- a/theCapitol.Web/Views/Home/Services.cshtml
+++ b/theCapitol.Web/Views/Home/Services.cshtml
@@ -13,29 +13,41 @@
             <!-- service -->
             <div class="col-md-4 col-sm-6">
                 <div class="service">
-                    <i class="fa fa-diamond"></i>
-                    <h3>App Development</h3>
-                    <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+                    <i class="fa fa-comments"></i>
+                    <h3>The Capitol</h3>
+                    <p>
+                        Our main youth service happens <span>Sundays at 6pm</span>.
+                        Be sure to <span>come early</span> to hang out with your friends
+                        in the lounge, or play some games!
+                    </p>
                 </div>
             </div>
             <!-- service -->
             <div class="col-md-4 col-sm-6">
                 <div class="service">
-                    <i class="fa fa-rocket"></i>
-                    <h3>Graphic Design</h3>
-                    <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+                    <i class="fa fa-music"></i>
+                    <h3>The Cause</h3>
+                    <p>
+                        Join us on the <span>3rd Sunday</span> of
+                        <span>every month at 6pm</span> to encounter God through a worship experience
+                        unlike any other.
+                    </p>
                 </div>
             </div>
             <!-- service -->
             <div class="col-md-4 col-sm-6">
                 <div class="service">
-                    <i class="fa fa-cogs"></i>
-                    <h3>Creative Idea</h3>
-                    <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+                    <i class="fa fa-users"></i>
+                    <h3>The Experience</h3>
+                    <p>
+                        <span>Everyone</span> is welcome to join us for our main service
+                        <span>Sundays at 10:30am</span>.
+                        Child care is provided at <span>no cost</span> to your family.
+                    </p>
                 </div>
             </div>
             <!-- service -->
-            <div class="col-md-4 col-sm-6">
+            @*<div class="col-md-4 col-sm-6">
                 <div class="service">
                     <i class="fa fa-diamond"></i>
                     <h3>Marketing</h3>
@@ -58,6 +70,6 @@
                     <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
