--- a/theCapitol.Web/Views/Home/Media.cshtml
+++ b/theCapitol.Web/Views/Home/Media.cshtml
@@ -12,14 +12,14 @@
                 </div>
                 <!-- work -->
                 <div class="col-md-4 col-xs-6 work">
-                    <img class="img-responsive" src="~/Content/img/template/work1.jpg" alt="">
+                    <img class="img-responsive" src="~/Content/img/band-1.jpeg" alt="">
                     <div class="overlay"></div>
                     <div class="work-content">
-                        <span>Category</span>
-                        <h3>Lorem ipsum dolor</h3>
+                        <span>Music</span>
+                        <h3>Remade (RC Worship)</h3>
                         <div class="work-link">
-                            <a href="#"><i class="fa fa-external-link"></i></a>
-                            <a class="lightbox" href="~/Content/img/template/work1.jpg"><i class="fa fa-search"></i></a>
+                            <a href="http://www.facebook.com/RemadeMusic.Band/" target="_blank"><i class="fa fa-external-link"></i></a>
+                            <a class="lightbox" href="~/Content/img/band-1.jpeg"><i class="fa fa-search"></i></a>
                         </div>
                     </div>
                 </div>
