--- a/theCapitol.Web/Views/Account/Register.cshtml
+++ b/theCapitol.Web/Views/Account/Register.cshtml
@@ -14,6 +14,23 @@
         <h4>create your account for the <span>Capitol</span></h4>
         <hr />
         <div class="form-group">
+            <div class="text-center">
+                @Html.ValidationSummary()
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label register-label" })
+            <div class="col-md-3">
+                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.FirstName)
+            </div>
+            @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label register-label" })
+            <div class="col-md-3">
+                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.LastName)
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label register-label" })
             <div class="col-md-8">
                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
@@ -32,8 +49,13 @@
                 @Html.ValidationMessageFor(m => m.ConfirmPassword)
             </div>
         </div>
-        @*<div class="form-group">
-            </div>*@
+        <div class="form-group">
+            @Html.LabelFor(m => m.InvitationCode, new { @class = "col-md-2 control-label register-label" })
+            <div class="col-md-8">
+                @Html.TextBoxFor(m => m.InvitationCode, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.InvitationCode)
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-9 col-md-3">
                 <input type="submit" class="btn btn-default" value="i'm ready!" />
